--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
           FOD_URL: https://emea.fortify.com
           FOD_TENANT: ${{secrets.FOD_TENANT}}
           FOD_USER: ${{secrets.FOD_USER}}
-          FOD_PASSWORD: ${{secrets.FOD_PAT}}
+          FOD_PASSWORD: ${{secrets.FOD_PASSWORD}}
           FOD_RELEASE: ${{env.FOD_RELEASE}}
