--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,3 +38,5 @@ jobs:
           FOD_USER: ${{secrets.FOD_USER}}
           FOD_PASSWORD: ${{secrets.FOD_PASSWORD}}
           FOD_RELEASE: ${{env.FOD_RELEASE}}
+          DO_WAIT: true
+          DO_POLICY_CHECK: true
